fix gap ios

--- a/src/index.css
+++ b/src/index.css
@@ -10,16 +10,6 @@
     body {
         user-select: none;
     }
-
-    @supports not (row-gap;: 1.5em) {
-        .gap-y-6 {
-            margin: -0.75em;
-        }
-
-        .gap-y-6>* {
-            margin: 0.75em;
-        }
-    }
 }
 
 @layer utilities {
